<resources>
    <string name="app_name">PokerWheel</string>
    <string name="playWithAI">Play with AI</string>

    <string name="welcome">Welcome to poker wheel game, please read the following instructions:</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Game Notice</string>
    <string name="ul_card_desc">Upper Left Card</string>
    <string name="ur_card_desc">Upper Right Card</string>
    <string name="dl_card_desc">Lower Left Card</string>
    <string name="dr_card_desc">Lower Right Card</string>
    <string name="button_turn">End Turn</string>

    <string name="settings">Settings</string>
    <string name="rank_description">The winner had the following cards:</string>
    <string name="setting1">Rounds per game:</string>
    <string name="setting2">Moves allowed per round:</string>
    <string name="setting3">Start Game with Cards:</string>


    <string name="instructions">Instructions</string>
    <string name="back">Back</string>
    <string name="instruction1">1) A timer will show how much time you have left to play\n\n2) You can swipe left or right to turn the wheel\n\n3) There are 3 rounds in total and you can swipe left/right max 3 times in each round (need to change)\n\n4) At the end of a round, choices of all the players are aggregated together and the wheel is turned the appropriate number of time\n\n5) Each player is awarded the card that ends up in front of them after the wheel is done turning\n\n6) After 5 rounds, the player with the best poker hand wins, using standard poker hands from Five-Card Draw</string>
<!--    <string name="instruction2">2) You can swipe left or right to turn the wheel</string>-->
<!--    <string name="instruction3">3) There are 5 rounds in total and you can swipe left/right max 3 times in each round</string>-->


</resources>